tests/suites/scctests/cc/error/0011-extraelse.c
/*
PATTERN:
0011-extraelse.c:11: error: #else without #ifdef/ifndef
.
*/

#if 1

#else

#else

#endif
